특정키 사용 금지

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,17 @@
     <title>React App</title>
   </head>
   <body>
+    <script>
+      document.addEventListener("keydown", function (event) {
+        if (
+          (event.key === "Ctrl") |
+          (event.key === "Shift") |
+          (event.key === "Alt")
+        ) {
+          event.preventDefault();
+        }
+      });
+    </script>
     <div id="root"></div>
   </body>
 </html>
